# Flatmate-Bill-WebApp

./: README.md  main.py  pyproject.toml
flatmates_bill/: flat.py  main.py  reports.py  scratch_fpdf.py
flatmates_bill/files/: design.txt
static/: main.css
templates/: bill_form_page.html  index.html  results.html
