[tool.poetry]
name = "2_flatmatesbill"
version = "0.1.0"
description = ""
authors = ["martinstajnko <stajnko.martin93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fpdf = "^1.7.2"
filestack-python = "^3.5.0"
Flask = "^2.0.2"
WTForms = "^2.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
